Working charts with byosecret

--- a/deploy/complete/helm-chart/mushop/charts/carts/templates/oadb-secrets.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/carts/templates/oadb-secrets.yaml
@@ -1,5 +1,6 @@
 {{- $usesOsb := (index (.Values.global | default .Values) "osb").atp | default .Values.osb.atp -}}
 {{- $oadbService := .Values.secrets.oadbService | default .Values.global.oadbService -}}
+{{- $oadbWalletPw := .Values.secrets.oadbWalletPassword | default .Values.global.oadbWalletPassword -}}
 {{- $oadbUser := .Values.secrets.oadbUser | default (printf "%s_user" .Chart.Name) -}}
 {{- $oadbPass := .Values.secrets.oadbPassword | default (printf "%s_deFAUlt321#" .Chart.Name) -}}
 
@@ -29,8 +30,10 @@ metadata:
 type: Opaque
 data:
   {{- if eq .Values.global.mock.service "all" }}
+  oadb_wallet_pw: {{ "mock" | b64enc }}
   oadb_service: {{ "mock" | b64enc }}
   {{- else }}
+  oadb_wallet_pw: {{ required "Value .secrets.oadbWalletPassword is required!" $oadbWalletPw | b64enc }}
   oadb_service: {{ required "Value .secrets.oadbService is required!" $oadbService | b64enc }}
   {{- end }}
 {{- end }}
