--- a/deploy/complete/helm-chart/mushop/charts/session/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/session/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: redis
   tag: alpine
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 securityContext:
   capabilities:
