--- a/deploy/complete/helm-chart/mushop/charts/shipping/templates/shipping-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/shipping/templates/shipping-deployment.yaml
@@ -1,4 +1,3 @@
-{{- $credentialSecret := (required "Value .ociSecretName is required!" (.Values.ociSecretName | default .Values.global.ociSecretName)) -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -31,6 +30,8 @@ spec:
             - containerPort: 80
               protocol: TCP
           env:
+          {{- if ne .Values.global.mock.service "all" }}
+          {{- $credentialSecret := required "Value .ociAuthSecret is required!" (.Values.ociAuthSecret | default .Values.global.ociAuthSecret) }}
             - name: STREAM_ID
               valueFrom:
                 secretKeyRef:
@@ -72,8 +73,10 @@ spec:
                 secretKeyRef:
                   name: {{ $credentialSecret }}
                   key: passphrase
+                  optional: true
             - name: OCI_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: {{ $credentialSecret }}
                   key: privatekey
+            {{- end -}}
