--- a/deploy/complete/helm-chart/mushop/values.yaml
+++ b/deploy/complete/helm-chart/mushop/values.yaml
@@ -3,8 +3,10 @@ global:
     service: "false"
   osb:
     instanceName: mushop
-  ociSecretName:
+  ociAuthSecret:
+  oadbAdminSecret:
   oadbWalletSecret:
+  oadbConnectionSecret:
 
 # Depending on the scenario, certain resources might need to be skipped.
 # For example, --set skip.streaming=true to disable required streaming secrets
