--- a/deploy/complete/helm-chart/mushop/charts/carts/templates/carts-job.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/carts/templates/carts-job.yaml
@@ -1,5 +1,5 @@
 {{- $usesOsb := (index (.Values.global | default .Values) "osb").atp | default .Values.osb.atp -}}
-{{- if or $usesOsb .Values.secrets.oadbAdminPassword }}
+{{- if or $usesOsb .Values.oadbAdminSecret .Values.global.oadbAdminSecret .Values.secrets.oadbAdminPassword  }}
 apiVersion: batch/v1
 kind: Job
 metadata:
