--- a/deploy/complete/helm-chart/mushop/charts/carts/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/carts/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: iad.ocir.io/oracle/ateam/mushop-carts
   tag: 1.1.0
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 dbtools:
   repository: iad.ocir.io/oracle/ateam/mushop-dbtools
