--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/oadb-secrets.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/oadb-secrets.yaml
@@ -1,5 +1,6 @@
 {{- $usesOsb := (index (.Values.global | default .Values) "osb").atp | default .Values.osb.atp -}}
 {{- $oadbService := .Values.secrets.oadbService | default .Values.global.oadbService -}}
+{{- $oadbWalletPw := .Values.secrets.oadbWalletPassword | default .Values.global.oadbWalletPassword -}}
 {{- $oadbUser := .Values.secrets.oadbUser | default (printf "%s_user" .Chart.Name) -}}
 {{- $oadbPass := .Values.secrets.oadbPassword | default (printf "%s_deFAUlt321#" .Chart.Name) -}}
 
