--- a/deploy/complete/helm-chart/mushop/charts/edge/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/edge/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: iad.ocir.io/oracle/ateam/mushop-edge-router
   tag: 1
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 resources:
   limits:
