--- a/deploy/complete/helm-chart/mushop/charts/orders/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/orders/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: iad.ocir.io/oracle/ateam/mushop-orders
   tag: 1.0.3
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 dbtools:
   repository: iad.ocir.io/oracle/ateam/mushop-dbtools
