--- a/deploy/complete/helm-chart/mushop/charts/stream/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/stream/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: iad.ocir.io/oracle/ateam/mushop-stream
   tag: 1.0.0
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 osb: {}
 
