some fixes, and support byo oss secret

--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/oadb-secrets.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/oadb-secrets.yaml
@@ -58,7 +58,7 @@ data:
 
 
 {{/* DB Wallet */}}
-{{- if not $usesOsb }}
+{{- if not (or $usesOsb .Values.oadbWalletSecret .Values.global.oadbWalletSecret) }}
 ---
 apiVersion: v1
 kind: Secret
