--- a/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.skip.streaming -}}
+{{- if not (or .Values.skip.streaming .Values.global.ossStreamSecret) -}}
 apiVersion: v1
 kind: Secret
 metadata:
