--- a/deploy/complete/helm-chart/mushop/values-dev.yaml
+++ b/deploy/complete/helm-chart/mushop/values-dev.yaml
@@ -1,4 +1,8 @@
 global:
+  ociAuthSecret: oci-credentials        # OCI authentication credentials secret name
+  oadbAdminSecret: oadb-admin           # Name of DB Admin secret created earlier
+  oadbWalletSecret: oadb-wallet         # Name of wallet secret created earlier
+  oadbConnectionSecret: oadb-connection # Name of connection secret created earlier
   mock:
     service: "false"
 
@@ -7,37 +11,33 @@ ingress:
 
 carts:
   secrets:
-    oadbAdminPassword:
-    oadbWalletPassword:
-    oadbService:
-    # Access is created when oadbAdminPassword is specified. Must be unique for each service
-    oadbUser:
-    oadbPassword:
+    oadbAdminPassword:    # ADMIN password entered when provisioning ATP database
+    oadbWalletPassword:   # Wallet password entered when downloading ATP connection Wallet
+    oadbService:          # TNS Name displayed when the Wallet is downloaded an example would be `mushopdb_TP`
+    oadbUser:             # can be changed as long as oadbAdminPassword is available
+    oadbPassword:         # can be changed as long as oadbAdminPassword is available
 
 catalogue:
   secrets:
-    oadbAdminPassword:
-    oadbService:
-    # Access is created when oadbAdminPassword is specified. Must be unique for each service
-    oadbUser:
-    oadbPassword:
+    oadbAdminPassword:    # ADMIN password entered when provisioning ATP database
+    oadbService:          # TNS Name displayed when the Wallet is downloaded an example would be `mushopdb_TP`
+    oadbUser:             # can be changed as long as oadbAdminPassword is available
+    oadbPassword:         # can be changed as long as oadbAdminPassword is available
 
 orders:
   secrets:
-    oadbAdminPassword:
-    oadbWalletPassword:
-    oadbService:
-    # Access is created when oadbAdminPassword is specified. Must be unique for each service
-    oadbUser:
-    oadbPassword:
+    oadbAdminPassword:    # ADMIN password entered when provisioning ATP database
+    oadbWalletPassword:   # Wallet password entered when downloading ATP connection Wallet
+    oadbService:          # TNS Name displayed when the Wallet is downloaded an example would be `mushopdb_TP`
+    oadbUser:             # can be changed as long as oadbAdminPassword is available
+    oadbPassword:         # can be changed as long as oadbAdminPassword is available
 
 user:
   secrets:
-    oadbAdminPassword:
-    oadbService:
-    # Access is created when oadbAdminPassword is specified. Must be unique for each service
-    oadbUser:
-    oadbPassword:
+    oadbAdminPassword:    # ADMIN password entered when provisioning ATP database
+    oadbService:          # TNS Name displayed when the Wallet is downloaded an example would be `mushopdb_TP`
+    oadbUser:             # can be changed as long as oadbAdminPassword is available
+    oadbPassword:         # can be changed as long as oadbAdminPassword is available
  
 secrets:
   streams:
