--- a/deploy/complete/helm-chart/mushop/values-test.yaml
+++ b/deploy/complete/helm-chart/mushop/values-test.yaml
@@ -1,4 +1,9 @@
 global:
+  ociAuthSecret: oci-credentials        # OCI authentication credentials secret name
+  ossStreamSecret: oss-connection       # Name of Stream Connection secret
+  oadbAdminSecret: oadb-admin           # Name of DB Admin secret created earlier
+  oadbWalletSecret: oadb-wallet         # Name of wallet secret created earlier
+  oadbConnectionSecret: oadb-connection # Name of connection secret created earlier
   mock:
     service: "false"
 
@@ -17,56 +22,3 @@ ingress:
 
   # If TLS is provided, cert-manager needs to be installed.
   tls: true
-
-api:
-  enabled: true
-
-carts:
-  enabled: true
-
-catalogue:
-  enabled: true
-
-edge:
-  enabled: true
-
-orders:
-  enabled: true
-
-payment:
-  enabled: true
-
-session:
-  enabled: true
-
-shipping:
-  enabled: true
-
-storefront:
-  enabled: true
-
-stream:
-  enabled: true
-
-user:
-  enabled: true
-
-secrets:
-  streams:
-    compartmentId:
-    tenantId:
-    userId:
-    region:
-    fingerprint:
-    passphrase:
-    keyFile:
-    streamName:
-    # future support
-    streamId:
-  serviceBroker:
-    tenantId:
-    userId:
-    region:
-    fingerprint:
-    passphrase:
-    keyFile:
