--- a/deploy/complete/helm-chart/mushop/charts/carts/templates/oadb-secrets.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/carts/templates/oadb-secrets.yaml
@@ -60,7 +60,7 @@ data:
 
 
 {{/* DB Wallet */}}
-{{- if not $usesOsb }}
+{{- if not (or $usesOsb .Values.oadbWalletSecret .Values.global.oadbWalletSecret) }}
 ---
 apiVersion: v1
 kind: Secret
