--- a/deploy/complete/docker-compose/docker-compose.yml
+++ b/deploy/complete/docker-compose/docker-compose.yml
@@ -153,24 +153,24 @@ services:
       - OCI_FINGERPRINT
       - OCI_API_KEY
 
-  # OCI Stream
-  # stream:
-  #   image: iad.ocir.io/oracle/ateam/mushop-stream:1.0.0
-  #   hostname: stream
-  #   restart: always
-  #   cap_drop:
-  #     - all
-  #   cap_add:
-  #     - NET_BIND_SERVICE
-  #   read_only: true
-  #   environment:
-  #     - reschedule:on-node-failure
-  #     - OCI_TENANT_ID
-  #     - OCI_COMPARTMENT_ID
-  #     - OCI_REGION
-  #     - OCI_USER_ID
-  #     - OCI_FINGERPRINT
-  #     - OCI_API_KEY
+  OCI Stream
+  stream:
+    image: iad.ocir.io/oracle/ateam/mushop-stream:1.0.0
+    hostname: stream
+    restart: always
+    cap_drop:
+      - all
+    cap_add:
+      - NET_BIND_SERVICE
+    read_only: true
+    environment:
+      - reschedule:on-node-failure
+      - OCI_TENANT_ID
+      - OCI_COMPARTMENT_ID
+      - OCI_REGION
+      - OCI_USER_ID
+      - OCI_FINGERPRINT
+      - OCI_API_KEY
 
   payment:
     image: iad.ocir.io/oracle/ateam/mushop-payment:0.0.1
