setting the catalogue data source to "mock"

--- a/deploy/complete/docker-compose/docker-compose.yml
+++ b/deploy/complete/docker-compose/docker-compose.yml
@@ -90,7 +90,7 @@ services:
       - reschedule=on-node-failure
       - OADB_USER=catalogue_user
       - OADB_PW
-      - OADB_SERVICE=mcatalogue_tp
+      - OADB_SERVICE=mock
 
   # OCI Carts service
   carts:
