Adding the newsletter-subscription function
I am also removing the mock mode for the function. If the URL is not provided/defined, we will just return a 200. That way we don't need to explicitly specify the mock mode for the function. Later if we want to or if we think it makes sense, we could modify the way mock mode is detected to also check if the env variables are not provided, to default to mock mode or something similar.

--- a/deploy/complete/helm-chart/mushop/charts/api/templates/api-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/api/templates/api-deployment.yaml
@@ -42,6 +42,8 @@ spec:
             value: http://{{ .Release.Name }}-user
           - name: STATIC_MEDIA_URL
             value: "{{ .Values.env.mediaUrl }}"
+          - name: NEWSLETTER_SUBSCRIBE_URL
+            value: "{{ .Values.env.newsletterSubscribeUrl }}"
           livenessProbe:
             httpGet:
               path: /health
