Moving NATS config to application.yaml

--- a/src/fulfillment/src/main/resources/application.yml
+++ b/src/fulfillment/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 micronaut:
   application:
     name: fulfillment
+
+mushop:
+  orderupdates:
+    host: localhost
+    port: 4222
+    subject: mushop-orders
