--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -4,12 +4,12 @@ spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
 spring.zipkin.enabled=${zipkin_enabled:false}
 spring.sleuth.sampler.percentage=1.0
 spring.application.name=orders
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.show-sql=true
+logging.level.mushop.*=DEBUG
