Config based nats URL

--- a/src/fulfillment/build.gradle
+++ b/src/fulfillment/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation "io.micronaut:micronaut-runtime"
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "io.micronaut:micronaut-management"
-    implementation 'io.nats:jnats:2.6.6'
+    implementation "io.nats:jnats:2.6.6"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
     testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
