--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -13,3 +13,7 @@ management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
 logging.level.mushop.*=DEBUG
+
+mushop.orderupdates.host=nats
+mushop.orderupdates.port=4222
+mushop.orderupdates.subject=mushop-orders
