Reverting to the JVM for now.

--- a/src/fulfillment/Dockerfile
+++ b/src/fulfillment/Dockerfile
@@ -32,29 +32,29 @@ COPY src /usr/src/app/src
 # build an executable fat jar
 RUN gradle clean assemble
 
-# Stage 3 : Build a native image using GraalVM
-FROM oracle/graalvm-ce:19.3.1-java8 as graalvm
-#FROM oracle/graalvm-ce:19.3.0-java11 as graalvm # For JDK 11
-COPY --from=appbuild /usr/src/app/build /home/app/fulfillment
-WORKDIR /home/app/fulfillment/
-RUN gu install native-image
-RUN native-image --no-server -cp libs/fulfillment-*-all.jar
-
-# Step 4 : Build the final application image
-FROM oracle/graalvm-ce:19.3.1-java8
-EXPOSE 8080
-COPY --from=graalvm /home/app/fulfillment/fulfillment /app/fulfillment
-ENTRYPOINT ["/app/fulfillment", "-Djava.library.path=/app"]
+#        # Stage 3 : Build a native image using GraalVM
+#        FROM oracle/graalvm-ce:19.3.1-java8 as graalvm
+#        #FROM oracle/graalvm-ce:19.3.0-java11 as graalvm # For JDK 11
+#        COPY --from=appbuild /usr/src/app/build /home/app/fulfillment
+#        WORKDIR /home/app/fulfillment/
+#        RUN gu install native-image
+#        RUN native-image --no-server --static -cp libs/fulfillment-*-all.jar
+#
+#        # Step 4 : Build the final application image
+#        FROM oracle/graalvm-ce:19.3.1-java8
+#        EXPOSE 8080
+#        COPY --from=graalvm /home/app/fulfillment/fulfillment /app/fulfillment
+#        ENTRYPOINT ["/app/fulfillment", "-Djava.library.path=/app"]
 
 # Alternate build - using a JVM
 
-#        FROM openjdk:8-jre-slim
-#
-#        # copy the generated application distribution
-#        COPY --from=appbuild /usr/src/app/build/libs/fulfillment-*-all.jar /app/${APPLICATION_NAME}-${VERSION}.jar
-#
-#        EXPOSE 8099
-#        WORKDIR /app
-#        ENV APPLICATION_NAME=${APPLICATION_NAME}
-#        ENV VERSION=${VERSION}
-#        ENTRYPOINT java $JAVA_OPTS -jar /app/${APPLICATION_NAME}-${VERSION}.jar
+FROM openjdk:8-jre-slim
+
+# copy the generated application distribution
+COPY --from=appbuild /usr/src/app/build/libs/fulfillment-*-all.jar /app/${APPLICATION_NAME}-${VERSION}.jar
+
+EXPOSE 8099
+WORKDIR /app
+ENV APPLICATION_NAME=${APPLICATION_NAME}
+ENV VERSION=${VERSION}
+ENTRYPOINT java $JAVA_OPTS -jar /app/${APPLICATION_NAME}-${VERSION}.jar
