updated values and etcd manifests

--- a/deploy/complete/helm-chart/provision/values.yaml
+++ b/deploy/complete/helm-chart/provision/values.yaml
@@ -8,6 +8,8 @@ global:
     compartmentId:
     # Service instance name
     instanceName: mushop
+    # OSB Namespace
+    namespace: mushop-utilities
   services:
     - catalogue
     - carts
