--- a/deploy/complete/helm-chart/mushop/values-prod.yaml
+++ b/deploy/complete/helm-chart/mushop/values-prod.yaml
@@ -12,12 +12,17 @@ ingress:
     - mushop.ateam.cloud
     - insecure.mushop.ateam.cloud
 
-  # Value can be either prod or staging
+  # Values examples: letsencrypt-prod, letsencrypt-staging, 
   # This controls the cluster issuer what's used in Ingress
-  clusterIssuer: prod
+  clusterIssuer: letsencrypt-prod
 
   # Used for ACME registration (if TLS is set)
   email: "no-reply@ateam-oracle.com"
 
   # If TLS is provided, cert-manager needs to be installed.
   tls: true
+
+api:
+  env:
+    mediaUrl:                 # Object Storage URL for catalog image assets
+    newsletterSubscribeUrl:   # Newsletter subscription endpoint (https://[API_GATEWAY_URL]/newsletter/subscribe)
