Split subjects orders and updates. Added retries for NATs connections.

--- a/src/fulfillment/src/main/resources/application.yml
+++ b/src/fulfillment/src/main/resources/application.yml
@@ -5,7 +5,9 @@ micronaut:
     port: 8099
 
 mushop:
-  orderupdates:
+  messaging:
     host: ${nats.host:localhost}
     port: 4222
-    subject: mushop-orders
+    subjects:
+      orders: mushop-orders
+      shipments: mushop-shipments
