Orders - split messaging subjects. updates configuration handling. Retries for NATS connection

--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -14,6 +14,11 @@ management.metrics.export.prometheus.enabled=true
 
 logging.level.mushop.*=DEBUG
 
-mushop.orderupdates.host=nats
-mushop.orderupdates.port=4222
-mushop.orderupdates.subject=mushop-orders
+mushop.messaging.host=${NATS_HOST:localhost}
+mushop.messaging.port=4222
+mushop.messaging.subjects.orders=mushop-orders
+mushop.messaging.subjects.shipments=mushop-shipments
+
+mushop.orders.oadbservice=${OADB_SERVICE:mock}
+mushop.orders.oadbuser=${OADB_USER:}
+mushop.orders.oadbpw=${OADB_PW:}
