--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.zipkin.enabled=${zipkin_enabled:false}
 spring.sleuth.sampler.percentage=1.0
 spring.application.name=orders
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
-logging.level.mushop.*=DEBUG
+logging.level.mushop.*=INFO
 
 mushop.messaging.host=${NATS_HOST:localhost}
 mushop.messaging.port=4222
