--- a/deploy/complete/helm-chart/mushop/templates/issuer.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/issuer.yaml
@@ -1,8 +1,8 @@
 {{- if .Values.ingress.clusterIssuer }}
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
-  name: {{ include "mushop.fullname" . }}-prod
+  name: {{ include "mushop.fullname" . }}-letsencrypt-prod
 spec:
   acme:
     # The ACME production api URL
@@ -12,22 +12,33 @@ spec:
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
-    # Enable the HTTP-01 challenge provider
-    http01: {}
+    solvers:
+    - http01:
+        ingress:
+          class: nginx
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
-  name: {{ include "mushop.fullname" . }}-staging
+  name: {{ include "mushop.fullname" . }}-letsencrypt-staging
 spec:
   acme:
-    # The ACME production api URL
-    server: https://acme-v02.api.letsencrypt.org/directory
+    # The ACME staging api URL
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
     email: {{ .Values.ingress.email }}
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-staging
-    # Enable the HTTP-01 challenge provider
-    http01: {}
+    solvers:
+    - http01:
+        ingress:
+          class:  nginx
+---
+apiVersion: cert-manager.io/v1alpha2
+kind: ClusterIssuer
+metadata:
+  name: {{ include "mushop.fullname" . }}-selfsigning
+spec:
+  selfSigned: {}
 {{- end -}}
