--- a/deploy/complete/helm-chart/provision/templates/service-binding-global.yaml
+++ b/deploy/complete/helm-chart/provision/templates/service-binding-global.yaml
@@ -13,3 +13,27 @@ spec:
         name: {{ .Values.global.osb.instanceName}}-oadb-connection
         key: oadb_wallet_pw_osb
 {{ end }}
+{{ if .Values.global.osb.oss }}
+---
+apiVersion: servicecatalog.k8s.io/v1beta1
+kind: ServiceBinding
+metadata:
+  name: {{ .Values.global.osb.instanceName }}-oss-binding
+  labels:
+{{ include "provision.labels" . | indent 4 }}
+spec:
+  instanceRef:
+    name: {{ .Values.global.osb.instanceName }}-oss
+{{ end }}
+{{ if .Values.global.osb.objectstorage }}
+---
+apiVersion: servicecatalog.k8s.io/v1beta1
+kind: ServiceBinding
+metadata:
+  name: {{ .Values.global.osb.instanceName }}-bucket-par-binding
+  labels:
+{{ include "provision.labels" . | indent 4 }}
+spec:
+  instanceRef:
+    name: {{ .Values.global.osb.instanceName }}-objectstorage
+{{ end }}
