values-prod-reference

--- a/deploy/complete/helm-chart/mushop/values-prod-reference.yaml
+++ b/deploy/complete/helm-chart/mushop/values-prod-reference.yaml
@@ -7,7 +7,7 @@ global:
   mock:
     service: "false"
   osb:
-    instanceName: mushopstage
+    instanceName: mushop
     atp: true
     oss: true
     objectstorage: true
