updated support to cluster service broker
Removed the need to enter namespace on the broker url

--- a/deploy/complete/helm-chart/mushop/values-prod-reference.yaml
+++ b/deploy/complete/helm-chart/mushop/values-prod-reference.yaml
@@ -11,7 +11,7 @@ global:
     atp: true
     oss: true
     objectstorage: true
-    objectstoragenamespace: ociateam
+    objectstoragenamespace: ocitenancyname
     
 ingress:
   enabled: true
